--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "client",
+  "name": "art-crm-system-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@iconify/icons-eva": "^1.1.0",
+    "@iconify/react": "^3.1.3",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,9 +17,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.3.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
