--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.33.1",
     "axios": "^0.23.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-helmet-async": "1.0.9",
