--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@iconify/react": "^3.1.3",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.4.0",
+    "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
