--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-big-calendar": "^0.38.9",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-helmet-async": "1.0.9",
@@ -28,6 +29,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.7",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^1.1.2"
   },
