--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "apexcharts": "^3.33.1",
     "axios": "^0.23.0",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.38.9",
