--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/react": "^3.1.3",
     "@material-ui/core": "^4.12.3",
+    "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.0",
     "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -33,7 +34,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.49.7",
     "simplebar-react": "^2.3.6",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
