--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@iconify-icons/akar-icons": "^1.2.1",
     "@iconify/icons-eva": "^1.1.0",
+    "@iconify/icons-ic": "^1.2.1",
     "@iconify/react": "^3.1.3",
     "@material-ui/core": "^4.12.3",
     "@mui/lab": "^5.0.0-alpha.69",
