--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,11 @@
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.38.9",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-file-base64": "^1.0.3",
     "react-helmet-async": "1.0.9",
     "react-hook-form": "^7.28.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
