--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,19 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.33.1",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.10",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.38.9",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-file-base64": "^1.0.3",
@@ -35,7 +39,7 @@
     "react-hook-form": "^7.28.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
