--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/timeline": "^5.10.1",
     "@hookform/resolvers": "^2.8.8",
     "@iconify-icons/akar-icons": "^1.2.1",
     "@iconify/icons-eva": "^1.1.0",
