--- a/client/package.json
+++ b/client/package.json
@@ -31,11 +31,14 @@
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "npm": "^8.7.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-base64-downloader": "^2.1.7",
     "react-big-calendar": "^0.38.9",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
